fix text-align

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -18,7 +18,6 @@ body {
 
 p {
 	margin: 30px 0;
-	text-align: justify;
 }
 
 h1,
